--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-
+{
+  "name": "backend-mercadopago",
+  "version": "1.0.0",
+  "description": "Servidor Mercado Pago",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mercadopago": "^2.0.15"
+  }
+}
